--- a/src/index.css
+++ b/src/index.css
@@ -275,11 +275,10 @@ All colors MUST be HSL.
 
   /* Uniform Admin Entry Modal (User, Materials, Blog Editor, etc.) */
   .modal-admin-uniform {
-    @apply modal-layout-standard mx-auto [&>button]:hidden;
+    @apply modal-layout-standard mx-auto [&>button]:hidden flex flex-col overflow-hidden;
     width: 95vw;
     max-width: 900px;
-    height: 800px;
-    max-height: 88vh;
+    height: 85vh;
   }
 
   /* Hover Lift Effect - Refined */
