--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ All colors MUST be HSL.
   }
 
   :root {
+    --card: 0 0% 100%;
     --card-foreground: 222 47% 11%;
 
     --popover: 0 0% 100%;
